# telegrambot-template-docker-main

./: .gitignore  README.md  docker-compose.yml
bot/: .env.example  Dockerfile  main.py  pyproject.toml
bot/logs/: README.md
